--- a/content.html
+++ b/content.html
@@ -16,6 +16,7 @@
             border-radius: 12px;
             padding: auto;
             font-family: cursive;
+            margin:auto;
         }
         h2{
             background: rgb(87, 113, 201) ;
@@ -23,21 +24,28 @@
             border-radius: 12px;
             text-decoration: white bold;
             font-family: cursive;
+            margin:auto;
+            padding:auto;
         }
         #htmlh2 {
             position: sticky;
             top:20px;
+            margin:auto;
         }
         #css {
             position: sticky;
-            top: 20px
+            top: 20px;
+            margin:auto;
         }
         #js{
             position:sticky;
             top:20px;
+            margin:auto;
+            padding:auto;
         }
         #form{
             font-family: cursive;
+            
             
         }
     </style>
